Test: controller 테스트 재작성 - course - vote - wishPlace